c/examples/writing-a-c-compiler-tests/tests/chapter_17/invalid_types/scalar_expressions/cast_void.c
int main(void) {
    // can only cast scalar values to int (or to any scalar type)
    int y = (int) (void) 3;
    return y;
}